# multi-agent-resource-sharing

./: CMakeLists.txt  README.md  parallel_execution.sh
controllers/: CMakeLists.txt
controllers/altruistic_behavior/: CMakeLists.txt  altruistic_behavior.cpp  altruistic_behavior.h
experiments/: .footbot_simple.argos.swp  altruistic_behavior.argos  altruistic_behavior_viz.argos  initial_distribution.txt
loop_functions/: CMakeLists.txt
loop_functions/altruistic_behavior_loop_functions/: CMakeLists.txt  altruistic_behavior_loop_functions.cpp  altruistic_behavior_loop_functions.h
loop_functions/altruistic_behavior_qt_user_functions/: CMakeLists.txt  altruistic_behavior_qt_user_functions.cpp  altruistic_behavior_qt_user_functions.h
