link_directories(${CMAKE_BINARY_DIR}/controllers/altruistic_behavior)
set(altruistic_behavior_loop_functions_SOURCES altruistic_behavior_loop_functions.cpp)

if(ARGOS_COMPILE_QTOPENGL)
  set(altruistic_behavior_loop_functions_SOURCES
    ${altruistic_behavior_loop_functions_SOURCES}
 )
endif(ARGOS_COMPILE_QTOPENGL)

add_library(altruistic_behavior_loop_functions MODULE ${altruistic_behavior_loop_functions_SOURCES})
target_link_libraries(altruistic_behavior_loop_functions
  argos3core_simulator
  argos3plugin_simulator_dynamics2d
  argos3plugin_simulator_entities
  argos3plugin_simulator_footbot
  argos3plugin_simulator_genericrobot
  argos3plugin_simulator_media)

